--- a/welcome1.html
+++ b/welcome1.html
@@ -10,15 +10,15 @@
     <div id="container1" class="container1">
       <div id="regWin">
         <form action="http://localhost:3000/registration" method="POST" id="registrationForm" class="regLogForm" >
-        <img src="logo1.png" class="logo">
-        <span> Rejestracja</span>
-        <label for=nameR style="display: inline-block">imie <input name=nameR type=text style="display:block"/>
-        </label>
-        <label for=email style="display: inline-block">email <input name=email type=email style="display:block"/>
-        </label>
-        <label for=psw style="display:inline-block">haslo <input name=psw type=password style="display:block"/>
-        </label>
-        <button type="submit" form="registrationForm" class="regButton">rejestruj</button>
+          <img src="logo1.png" class="logo">
+          <p style="font-weight:600;" class="center">Rejestracja</p>
+          <label for=nameR style="display: inline-block">imie <input name=nameR type=text style="display:block"/>
+          </label>
+          <label for=email style="display: inline-block">email <input name=email type=email style="display:block"/>
+          </label>
+          <label for=psw style="display:inline-block">haslo <input name=psw type=password style="display:block"/>
+          </label>
+          <button type="submit" form="registrationForm" class="regButton center">rejestruj</button>
         </form>
       </div>
       <div class="buttons">
